// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> ButtonActionCalloutCard story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--raised button-action-callout-card"
  >
    <div
      class="card__body"
    >
      <h3
        class="heading heading--size-h5"
      >
        Do This Checkpoint
      </h3>
      <div
        class="button-action-callout-card__body-inner"
      >
        Develop the text of your Body Book, crafting evidence-supported explanations on how the body is organized and its functions.
        <div>
          <button
            class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
            type="button"
          >
            Preview
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`<Card /> CardWithNotification story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="card-with-notification"
  >
    <article
      class="card card--raised card-with-notification__card"
    >
      <header
        class="card__header"
      >
        <div
          class="fpo"
        >
          Card Header
        </div>
      </header>
      <div
        class="card__body"
      >
        <div
          class="fpo"
        >
          Card Body
        </div>
      </div>
      <footer
        class="card__footer"
      >
        <div
          class="fpo"
        >
          Card Footer
        </div>
      </footer>
    </article>
    <div
      class="inline-notification inline-notification--success inline-notification--subtle inline-notification--full-width inline-notification--full-width-subtle"
    >
      <svg
        class="icon inline-notification__icon inline-notification__icon--success"
        fill="currentColor"
        height="1.5rem"
        role="img"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          success
        </title>
        <path
          d="M12 22C10.6167 22 9.31667 21.7373 8.1 21.212C6.88333 20.6873 5.825 19.975 4.925 19.075C4.025 18.175 3.31267 17.1167 2.788 15.9C2.26267 14.6833 2 13.3833 2 12C2 10.6167 2.26267 9.31667 2.788 8.1C3.31267 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.31233 8.1 2.787C9.31667 2.26233 10.6167 2 12 2C13.3833 2 14.6833 2.26233 15.9 2.787C17.1167 3.31233 18.175 4.025 19.075 4.925C19.975 5.825 20.6873 6.88333 21.212 8.1C21.7373 9.31667 22 10.6167 22 12C22 13.3833 21.7373 14.6833 21.212 15.9C20.6873 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6873 15.9 21.212C14.6833 21.7373 13.3833 22 12 22ZM10.6 16.6L17.65 9.55L16.25 8.15L10.6 13.8L7.75 10.95L6.35 12.35L10.6 16.6Z"
        />
      </svg>
      <span
        class="text text--body text--success inline-notification__text"
      >
        Lorem ipsum dolor sit amet
      </span>
    </div>
  </div>
</div>
`;

exports[`<Card /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> Dragging story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--dragging"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> Horizontal story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--horizontal"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> InteractiveOnHover story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card"
  >
    <div
      class="card__body"
    >
      <div
        class="fpo p-6"
      >
        Card Contents
      </div>
    </div>
  </article>
</div>
`;

exports[`<Card /> LoadingProfileCard story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-label="Loading example profile card"
    role="status"
  >
    <article
      class="card"
    >
      <div
        class="card__body"
      >
        <div
          aria-hidden="true"
          class="mb-3 skeleton skeleton-circle skeleton--is-animating"
          style="width: 48px; height: 48px;"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 15ch; height: 4rem;"
        />
        <hr
          class="hr"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 30ch; height: 1.5rem;"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 25ch; height: 1.5rem;"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 10ch; height: 1.5rem;"
        />
      </div>
    </article>
  </div>
</div>
`;

exports[`<Card /> Raised story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--raised"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> StaticOnHover story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--raised"
  >
    <div
      class="card__body"
    >
      <div
        class="fpo p-6"
      >
        Card Contents
      </div>
    </div>
  </article>
</div>
`;
